# ArraysReallocation

./: .gitignore  CMakeLists.txt  MatrixReallocation.sln  double_block_selection_test_log.txt  floyd_parameters.txt  floyd_test_log.txt  mult_parameters.txt  mult_test_log.txt  parameters.txt  params.txt  qr_parameters.txt  qralg_test_log.txt  realloc_parameters.txt  reallocation_test_log.txt  test_log.txt
MatrixReallocation/: MatrixReallocation.vcxproj  MatrixReallocation.vcxproj.filters  floydalg.cpp  floydalg.h  main.cpp  multiplication.cpp  multiplication.h  qralg.cpp  qralg.h  reallocating.cpp  reallocating.h  reallocation.cpp  reallocation.h  service.cpp  service.h  taskdata.cpp  taskdata.h  testing.cpp  testing.h
MatrixReallocation/include/: floydalg.h  mappingfuncs.h  multiplication.h  qralg.h  reallocation.h  realloccore.h  service.h  taskdata.h
MatrixReallocation/source/: floydalg.c  floydalg.cpp  main.cpp  mappingfuncs.cpp  multiplication.c  multiplication.cpp  qralg.c  qralg.cpp  reallocation.cpp  service.cpp  taskdata.cpp  testing.cpp
resource/log/: floyd_test_log.txt  mult_test_log.txt  qralg_test_log.txt  reallocation_test_log.txt
resource/parameter/: floyd_parameters.txt  mult_parameters.txt  qr_parameters.txt  realloc_parameters.txt
